[gd_scene load_steps=6 format=3 uid="uid://cfrvinb5rmhlm"]

[ext_resource type="Script" uid="uid://3gh8gkilwvfi" path="res://scripts/NPCscripts/carnie.gd" id="1_l17di"]
[ext_resource type="SpriteFrames" uid="uid://b2klb2wvfkst7" path="res://scenes/interactables/carnie.tres" id="2_stmyg"]
[ext_resource type="PackedScene" uid="uid://qse0gjwqc2le" path="res://scenes/interactables/main_door_key.tscn" id="3_stmyg"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ckbgb"]
size = Vector3(2.37671, 2.24438, 2.18848)

[sub_resource type="BoxShape3D" id="BoxShape3D_stmyg"]
size = Vector3(1, 1, 8.3689)

[node name="carnie" type="Node3D"]
script = ExtResource("1_l17di")

[node name="carnieSprite" type="AnimatedSprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.41755)
pixel_size = 0.006
alpha_cut = 3
texture_filter = 0
sprite_frames = ExtResource("2_stmyg")
animation = &"waving"
autoplay = "default"

[node name="talkBox" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="talkBox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.452261, -0.460978, 1.97211)
shape = SubResource("BoxShape3D_ckbgb")

[node name="talkLight" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.0243624, 0.999703, 0, -0.999703, 0.0243624, 0, 3.29399, 1.86914)
light_energy = 9.192
spot_range = 5.31309
spot_attenuation = 1.46
spot_angle = 22.137

[node name="mainDoorKeyPickUpArea" parent="." instance=ExtResource("3_stmyg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.42303, -1.7065, 2.91847)
visible = false

[node name="carnieVoice" type="AudioStreamPlayer3D" parent="."]
volume_db = -15.0

[node name="waveDelay" type="Timer" parent="."]
wait_time = 9.0
one_shot = true

[node name="surpriseBox" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="surpriseBox"]
transform = Transform3D(0.65844, 0, 0.752633, 0, 1, 0, -0.752633, 0, 0.65844, -4.10085, 0, 6.05247)
shape = SubResource("BoxShape3D_stmyg")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="surpriseBox"]
transform = Transform3D(0.56061, 0, -0.82808, 0, 1, 0, 0.82808, 0, 0.56061, 3.6072, 0, 6.11891)
shape = SubResource("BoxShape3D_stmyg")

[connection signal="body_entered" from="talkBox" to="." method="_on_talk_box_body_entered"]
[connection signal="body_exited" from="talkBox" to="." method="_on_talk_box_body_exited"]
[connection signal="timeout" from="waveDelay" to="." method="_on_wave_delay_timeout"]
[connection signal="area_entered" from="surpriseBox" to="." method="_on_surprise_box_area_entered"]
[connection signal="body_entered" from="surpriseBox" to="." method="_on_surprise_box_body_entered"]
